17th feb changes

--- a/17th feb/index.html
+++ b/17th feb/index.html
@@ -53,6 +53,8 @@
     <div class="attribute-selector">
         <h1>Attribute Selector</h1>
         <input type="text" placeholder="hello">
+        <input type="password" placeholder="Password">
+        <input type="number" placeholder="Age">
     </div>
 </body>
 
