--- a/18th feb/index.html
+++ b/18th feb/index.html
@@ -80,7 +80,7 @@
 
     <section>
         <div class="container">
-            <!-- <img src="./assets/banner-image.jpg"> -->
+            <div class="img"></div>
             <div class="img_content">
                 <h1>Better Education for Better World</h1>
                 <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero accusamus possimus maxime iure sed harum earum consequuntur assumenda quis porro!</div>
