--- a/22feb/index.html
+++ b/22feb/index.html
@@ -52,7 +52,7 @@
     <section class="content container">
         <div class="leftside">
             <img class="img-round" src="./camera.jpeg" alt="mobile">
-            <h5 class="content-heading">Lorem ipsum dolor sit</h5>
+            <h5 class="content-heading">Lorem ipsum dolor sit amet</h5>
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores harum libero, vel ex amet sunt? </p>
             <a class="btn" href="/">Learn More</a>
         </div>
