--- a/23feb/index.html
+++ b/23feb/index.html
@@ -101,7 +101,7 @@
           <a href="javascript:void(0)"><i class="fab fa-youtube "></i></a>
           <a href="javascript:void(0)"><i class="fab fa-linkedin "></i></a>
         </div>
-        <p>Copyright &copy; 2020 - EdgeLedger</p>
+        <p>Copyright &copy; 2021 - Charu Goyal</p>
       </footer>
     
 </body>
