--- a/22feb/index.html
+++ b/22feb/index.html
@@ -17,17 +17,17 @@
           
             <div class="nav-right">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/">Generic</a></li>
-                    <li><a href="/">Elements</a></li>
+                    <li><a href="javascript:void(0)">Home</a></li>
+                    <li><a href="javascript:void(0)">Generic</a></li>
+                    <li><a href="javascript:void(0)">Elements</a></li>
                     <i onclick="openNav()" class="fa fa-bars"></i> 
                 </ul>
             </div>
             <div id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <li href="#">Home</li>
-                <li href="#">Generic</li>
-                <li href="#">Elements</li>
+                <li href="javascript:void(0)">Home</li>
+                <li href="javascript:void(0)">Generic</li>
+                <li href="javascript:void(0)">Elements</li>
             </div>
           
         </nav>
